# WSGI-Framework

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py
config/: app.py  core.py  generic.py  handlers.py  middlware.py  settings.py  urls.py  utils.py  views.py
database/: core.py  exception.py  storage.py
mainapp/: __init__.py  core.py  engine.py  mappers.py  middleware.py  models.py  serializers.py  views.py
mainapp/templates/: about.html  base.html  category_list.html  contacts.html  courses_list.html  create_category.html  create_course.html  index.html  register.html  sidebar.html  students_list.html  subscribe_course.html
static/css/: style.css
templates/: index.html
