[tool.poetry]
name = "wsgi-framework"
version = "0.1.0"
description = "web-framework with ORM"
authors = ["kpomak <romka_ne@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wsgi_framework"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "3.1.2"
whitenoise = "6.4.0"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
